classDiagram
    class PawPalSystem {
        +list~Owner~ owners
        +add_owner(owner: Owner) None
        +remove_owner(owner_name: str) None
        +get_owner(owner_name: str) Optional~Owner~
        +get_scheduler(owner_name: str, pet_name: str) Scheduler
    }

    class Owner {
        +str name
        +int available_minutes
        +str preferred_start_time
        +list~Pet~ pets
        +add_pet(pet: Pet) None
        +remove_pet(pet_name: str) None
        +get_pet(pet_name: str) Optional~Pet~
        +get_tasks(pet_name: str, completed: bool) list~tuple~
    }

    class Pet {
        +str name
        +str species
        +str breed
        +int age_years
        +list~Task~ tasks
        +add_task(task: Task) None
        +remove_task(task_name: str) None
        +get_task(task_name: str) Optional~Task~
        +high_priority_tasks() list~Task~
        +filter_tasks(completed: bool) list~Task~
        +mark_task_complete(task_title: str, today: datetime) Optional~Task~
    }

    class Priority {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
    }

    class Task {
        +str title
        +int duration_minutes
        +Priority priority
        +str preferred_time
        +Optional~datetime~ due_date
        +bool is_recurring
        +str recurrence_frequency
        +str notes
        +bool completed
        +is_high_priority() bool
        +mark_complete() None
        +next_occurrence(today: datetime) Task
    }

    class Scheduler {
        +Owner owner
        +Pet pet
        +generate_plan() DailyPlan
        +_sort_tasks(tasks: list~Task~) list~Task~
        +sort_by_time(tasks: list~Task~) list~Task~
        +_fits_in_budget(task: Task, used: int) bool
        +find_conflicts(plan: DailyPlan) list~tuple~
        +find_cross_pet_conflicts(plans: list~DailyPlan~)$ list~tuple~
        +warn_conflicts(plans: list~DailyPlan~)$ Iterator~str~
    }

    class DailyPlan {
        +Pet pet
        +Owner owner
        +datetime start_time
        +list~ScheduledTask~ scheduled_tasks
        +list~Task~ skipped_tasks
        +add_entry(task: Task) None
        +total_minutes() int
        +explain() str
    }

    class ScheduledTask {
        +Task task
        +datetime start_time
        +datetime end_time
    }

    PawPalSystem "1" --> "0..*" Owner : manages
    Owner "1" --> "1..*" Pet : owns
    Pet "1" --> "0..*" Task : has
    Task --> Priority : uses
    Scheduler --> Owner : uses
    Scheduler --> Pet : schedules for
    Scheduler --> DailyPlan : produces
    Scheduler ..> ScheduledTask : inspects for conflicts
    DailyPlan "1" --> "0..*" ScheduledTask : contains
    DailyPlan --> Owner : references
    ScheduledTask --> Task : wraps
